fixed alignment of circle and added boarder which will change with progress bar

--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ body{
     border-radius: 50%;
     height: 30px;
     width: 30px;
-    display: 
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #e0e0e0;
+    transition: .4s ease;
 }
